# resilico

./: LICENSE  README.md
client/: package-lock.json  package.json
client/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
client/app/dashboard/: page.tsx
client/app/data/: page.tsx
client/app/network/: page.tsx
client/app/reports/: page.tsx
client/app/simulation/: page.tsx
client/app/stress-test/: page.tsx
client/components/graph/: CascadeViewer.tsx  NetworkGraph.tsx  SimulationChart.tsx  StabilityGauge.tsx
client/components/ui/: animated-number.tsx  badge.tsx  bouncy-card.tsx  button.tsx  card.tsx  fade-in-row.tsx  sidebar.tsx  tabs.tsx
client/hooks/: useTutorial.ts
client/lib/: api.ts  tutorials.ts  useCommunityData.ts
client/types/: react-cytoscapejs.d.ts
server/: .gitignore  main.py  pyproject.toml
server/app/db/: __init__.py  database.py  models.py  seed.py
server/app/routers/: analysis.py  community.py  exposures.py  members.py  reports.py  simulation.py  stress.py
server/app/schemas/: __init__.py  exposure.py  member.py  simulation.py
server/app/services/: __init__.py
server/app/services/analysis/: policy.py  stability.py  stress.py
server/app/services/engines/: cascade.py  graph.py  simulation.py
server/app/services/infra/: celery.py  report.py  tasks.py
